client/app/main/main.less
.main-container {
  display: flex;
  flex-flow: column nowrap;
  align-items: stretch;
  justify-content: flex-start;
  background: #000000;
}

/////////////////////////////////////////////////
// navbar

.my-navbar {
  margin-bottom: 0 !important;
  border-radius: 0 !important;
  flex: none;
}

.dropdown-menu {
  z-index: 1001;
}

.navbar-inverse .dropdown-menu {
  background-color: #222;
  border-color: #080808;
  & > li > a{
    color: #999;
    &:hover {
      color: #fff;
      background-color: #000;
    }
  }
  & > .divider {
    background-color: #000;
  }
}

.sidebar-toggle {
  float: left;
  margin-top: 8px;
}

a.navbar-brand {
  padding-top: 15px;
  padding-bottom: 10px;
}

@media (max-width: 480px) {
  a.navbar-brand > img {
    display: none;
  }
}

a.navbar-brand > img {
  animation-duration: 1.5s;
}

// navbar
/////////////////////////////////////////////////

.content-container {
  flex: 1;

  display: flex;
  flex-flow: row nowrap;
  align-items: stretch;
  justify-content: flex-start;
}

.sidebar-container {
  flex: none;
  width: 250px;

  overflow-y: auto;
  background: #000;
}

.sidebar-container.ng-hide-add {
  animation: 0.5s slideOutLeft ease;
}

.sidebar-container.ng-hide-remove {
  animation: 0.5s slideInLeft ease;
}

.page-content-container {
  flex: 1;
}

.my-footer {
  flex: none;
  background: #000000;
  color: #ffffff;
}

